# EDF-Reader

./: README.md
source/: CMakeLists.txt  edf.cpp  edf.hpp  edf.js  edf.wasm  edfUpload.html  edf_bindings.cpp  edfwasm.cpp  edfwasm.hpp  main.cpp  signaldata.cpp  signaldata.hpp
